// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagWall Rendering renders 1`] = `
<TagWall
  addButtonDisabled={false}
  addLabel="Add"
  className=""
  disable={false}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "0",
        "isSelected": true,
        "label": "Tag 1",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "1",
        "isSelected": true,
        "label": "Tag 2",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "2",
        "isSelected": true,
        "label": "Tag 3",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "3",
        "isSelected": false,
        "label": "Tag 4",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "4",
        "isSelected": false,
        "label": "Tag 5",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "5",
        "isSelected": false,
        "label": "Tag 6",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "6",
        "isSelected": false,
        "label": "Tag 7",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "7",
        "isSelected": false,
        "label": "Tag 8",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
    ]
  }
  label="Label"
  labels={Object {}}
  onAddButton={[Function]}
  onChange={[Function]}
>
  <section
    aria-label="Label"
    className="security--tag-wall"
  >
    <h2
      className="security--tag-wall__label"
    >
      Label
    </h2>
    <InteractiveTag
      example-attribute="example-value"
      id="0"
      isSelected={true}
      key="tag__0"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={true}
        id="0"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 1"
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="0"
        >
          <span
            className="bx--tag__label"
            title="Tag 1"
          >
            Tag 1
          </span>
          <button
            aria-labelledby="0"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="1"
      isSelected={true}
      key="tag__1"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={true}
        id="1"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 2"
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="1"
        >
          <span
            className="bx--tag__label"
            title="Tag 2"
          >
            Tag 2
          </span>
          <button
            aria-labelledby="1"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="2"
      isSelected={true}
      key="tag__2"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={true}
        id="2"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 3"
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="2"
        >
          <span
            className="bx--tag__label"
            title="Tag 3"
          >
            Tag 3
          </span>
          <button
            aria-labelledby="2"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="3"
      isSelected={false}
      key="tag__3"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={true}
        id="3"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 4"
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="3"
        >
          <span
            className="bx--tag__label"
            title="Tag 4"
          >
            Tag 4
          </span>
          <button
            aria-labelledby="3"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="4"
      isSelected={false}
      key="tag__4"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={true}
        id="4"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 5"
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="4"
        >
          <span
            className="bx--tag__label"
            title="Tag 5"
          >
            Tag 5
          </span>
          <button
            aria-labelledby="4"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="5"
      isSelected={false}
      key="tag__5"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={true}
        id="5"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 6"
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="5"
        >
          <span
            className="bx--tag__label"
            title="Tag 6"
          >
            Tag 6
          </span>
          <button
            aria-labelledby="5"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="6"
      isSelected={false}
      key="tag__6"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={true}
        id="6"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 7"
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="6"
        >
          <span
            className="bx--tag__label"
            title="Tag 7"
          >
            Tag 7
          </span>
          <button
            aria-labelledby="6"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="7"
      isSelected={false}
      key="tag__7"
      onRemove={[Function]}
      removable={true}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={true}
        id="7"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          aria-label=" Tag 8"
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
          example-attribute="example-value"
          id="7"
        >
          <span
            className="bx--tag__label"
            title="Tag 8"
          >
            Tag 8
          </span>
          <button
            aria-labelledby="7"
            className="bx--tag__close-icon"
            onClick={[Function]}
            title=""
            type="button"
          >
            <ForwardRef(Close16)>
              <Icon
                fill="currentColor"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </Icon>
            </ForwardRef(Close16)>
          </button>
        </div>
      </Tag>
    </InteractiveTag>
    <Button
      dangerDescription="danger"
      disabled={false}
      isExpressive={false}
      kind="ghost"
      largeText={null}
      loading={false}
      onClick={[Function]}
      size="small"
      tabIndex={0}
      tooltipAlignment="center"
      tooltipPosition="top"
      type="button"
    >
      <Button
        className=""
        dangerDescription="danger"
        disabled={false}
        isExpressive={false}
        kind="ghost"
        onClick={[Function]}
        size="small"
        tabIndex={0}
        tooltipAlignment="center"
        tooltipPosition="top"
        type="button"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="bx--btn bx--btn--sm bx--btn--ghost"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Add
        </button>
      </Button>
    </Button>
  </section>
</TagWall>
`;

exports[`TagWall Rendering renders the HTML of the node's subtree 1`] = `
<section
  aria-label="Label"
  class="security--tag-wall"
>
  <h2
    class="security--tag-wall__label"
  >
    Label
  </h2>
  <div
    aria-label=" Tag 1"
    class="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="0"
  >
    <span
      class="bx--tag__label"
      title="Tag 1"
    >
      Tag 1
    </span>
    <button
      aria-labelledby="0"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 2"
    class="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="1"
  >
    <span
      class="bx--tag__label"
      title="Tag 2"
    >
      Tag 2
    </span>
    <button
      aria-labelledby="1"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 3"
    class="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="2"
  >
    <span
      class="bx--tag__label"
      title="Tag 3"
    >
      Tag 3
    </span>
    <button
      aria-labelledby="2"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 4"
    class="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="3"
  >
    <span
      class="bx--tag__label"
      title="Tag 4"
    >
      Tag 4
    </span>
    <button
      aria-labelledby="3"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 5"
    class="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="4"
  >
    <span
      class="bx--tag__label"
      title="Tag 5"
    >
      Tag 5
    </span>
    <button
      aria-labelledby="4"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 6"
    class="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="5"
  >
    <span
      class="bx--tag__label"
      title="Tag 6"
    >
      Tag 6
    </span>
    <button
      aria-labelledby="5"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 7"
    class="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="6"
  >
    <span
      class="bx--tag__label"
      title="Tag 7"
    >
      Tag 7
    </span>
    <button
      aria-labelledby="6"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <div
    aria-label=" Tag 8"
    class="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--filter bx--tag--gray"
    example-attribute="example-value"
    id="7"
  >
    <span
      class="bx--tag__label"
      title="Tag 8"
    >
      Tag 8
    </span>
    <button
      aria-labelledby="7"
      class="bx--tag__close-icon"
      title=""
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
        />
      </svg>
    </button>
  </div>
  <button
    class="bx--btn bx--btn--sm bx--btn--ghost"
    tabindex="0"
    type="button"
  >
    Add
  </button>
</section>
`;

exports[`TagWall Rendering renders the disabled variation 1`] = `
<TagWall
  addButtonDisabled={false}
  addLabel="Add"
  className=""
  disable={true}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "0",
        "isSelected": true,
        "label": "Tag 1",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "1",
        "isSelected": true,
        "label": "Tag 2",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "2",
        "isSelected": true,
        "label": "Tag 3",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "3",
        "isSelected": false,
        "label": "Tag 4",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "4",
        "isSelected": false,
        "label": "Tag 5",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "5",
        "isSelected": false,
        "label": "Tag 6",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "6",
        "isSelected": false,
        "label": "Tag 7",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
      Object {
        "id": "7",
        "isSelected": false,
        "label": "Tag 8",
        "props": Object {
          "example-attribute": "example-value",
        },
      },
    ]
  }
  label="Label"
  labels={Object {}}
  onAddButton={[Function]}
  onChange={[Function]}
>
  <section
    aria-label="Label"
    className="security--tag-wall"
  >
    <h2
      className="security--tag-wall__label"
    >
      Label
    </h2>
    <InteractiveTag
      example-attribute="example-value"
      id="0"
      isSelected={true}
      key="tag__0"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="0"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="0"
        >
          <span
            title="Tag 1"
          >
            Tag 1
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="1"
      isSelected={true}
      key="tag__1"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="1"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="1"
        >
          <span
            title="Tag 2"
          >
            Tag 2
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="2"
      isSelected={true}
      key="tag__2"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--selected"
        example-attribute="example-value"
        filter={false}
        id="2"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--selected bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="2"
        >
          <span
            title="Tag 3"
          >
            Tag 3
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="3"
      isSelected={false}
      key="tag__3"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="3"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="3"
        >
          <span
            title="Tag 4"
          >
            Tag 4
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="4"
      isSelected={false}
      key="tag__4"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="4"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="4"
        >
          <span
            title="Tag 5"
          >
            Tag 5
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="5"
      isSelected={false}
      key="tag__5"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="5"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="5"
        >
          <span
            title="Tag 6"
          >
            Tag 6
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="6"
      isSelected={false}
      key="tag__6"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="6"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="6"
        >
          <span
            title="Tag 7"
          >
            Tag 7
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <InteractiveTag
      example-attribute="example-value"
      id="7"
      isSelected={false}
      key="tag__7"
      onRemove={[Function]}
      removable={false}
      removeBtnLabel=""
      type="gray"
    >
      <Tag
        className="security--tag--interactive security--tag--interactive--default"
        example-attribute="example-value"
        filter={false}
        id="7"
        onClose={[Function]}
        title=""
        type="gray"
      >
        <div
          className="bx--tag security--tag--interactive security--tag--interactive--default bx--tag--gray"
          disabled={null}
          example-attribute="example-value"
          id="7"
        >
          <span
            title="Tag 8"
          >
            Tag 8
          </span>
        </div>
      </Tag>
    </InteractiveTag>
    <Button
      dangerDescription="danger"
      disabled={true}
      isExpressive={false}
      kind="ghost"
      largeText={null}
      loading={false}
      onClick={[Function]}
      size="small"
      tabIndex={0}
      tooltipAlignment="center"
      tooltipPosition="top"
      type="button"
    >
      <Button
        className=""
        dangerDescription="danger"
        disabled={true}
        isExpressive={false}
        kind="ghost"
        onClick={[Function]}
        size="small"
        tabIndex={0}
        tooltipAlignment="center"
        tooltipPosition="top"
        type="button"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="bx--btn bx--btn--sm bx--btn--ghost bx--btn--disabled"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Add
        </button>
      </Button>
    </Button>
  </section>
</TagWall>
`;
